# myQQbot

./: Cargo.toml  README.md  config.toml.example  setup.sh
.github/workflows/: rust.yml
scripts/: command_handler.py
src/: dispatch.rs  gateway.rs  main.rs
src/dispatch/: commands.rs
