[package]
name = "myQQBot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2+spec-1.1.0"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }